# nifti_mrs_tools

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  mrs_tools.html  nifti_mrs.create_nmrs.html  nifti_mrs.definitions.html  nifti_mrs.hdr_ext.html  nifti_mrs.html  nifti_mrs.nifti_mrs.html  nifti_mrs.tools.misc.html  nifti_mrs.tools.reorder.html  nifti_mrs.tools.reshape.html  nifti_mrs.tools.split_merge.html  nifti_mrs.tools.utils.html  nifti_mrs.utils.html  nifti_mrs.validator.html  objects.inv  py-modindex.html  readme.md  search.html  searchindex.js  setup.cfg  setup.py
.github/: requirements.yml  requirements_fslmrs.yml
.github/workflows/: publish.yml  push_pr.yml  requirements.yml
_sources/: index.rst.txt  mrs_tools.rst.txt  nifti_mrs.create_nmrs.rst.txt  nifti_mrs.hdr_ext.rst.txt  nifti_mrs.nifti_mrs.rst.txt  nifti_mrs.tools.misc.rst.txt  nifti_mrs.tools.reorder.rst.txt  nifti_mrs.tools.split_merge.rst.txt  nifti_mrs.tools.utils.rst.txt
apidoc/: conf.py  mrs_tools.rst  nifti_mrs.definitions.rst  nifti_mrs.rst  nifti_mrs.tools.reshape.rst  nifti_mrs.utils.rst  nifti_mrs.validator.rst
src/mrs_tools/: __init__.py  constants.py
src/nifti_mrs/: _version.py  axes.py  create_nmrs.py  definitions.py  hdr_ext.py  nifti_mrs.py  utils.py  validator.py  vis.py
src/nifti_mrs/tools/: __init__.py  misc.py  reorder.py  reshape.py  split_merge.py  utils.py
tests/: test_axes.py  test_create_nmrs.py  test_hdr_ext.py  test_nifti_mrs.py  test_nifti_mrs_tools_misc.py  test_nifti_mrs_tools_reorder.py  test_nifti_mrs_tools_reshape.py  test_nifti_mrs_tools_split_merge.py  test_nifti_mrs_tools_utils.py  test_nifti_mrs_vis.py  test_script_mrs_tools.py  test_validator.py
