[metadata]
name=nifti_mrs

# [options]
# package_dir=
#     =src
# packages=find:

# [options.packages.find]
# where=src

[options.entry_points]
console_scripts =
    mrs_tools = mrs_tools:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/nifti_mrs/_version.py
versionfile_build = nifti_mrs/_version.py

[flake8]
ignore =
    # Multiple spaces before operator
    E221
    W503
per-file-ignores =
    __init__.py:F401
    src/nifti_mrs/definitions.py:E501
exclude =
    .git,
    __pycache__,
    .vscode,
max-line-length=120