[metadata]
name=nifti_mrs
url=https://github.com/wtclarke/nifti_mrs_tools
description = Software tools for the NIfTI-MRS data format
long_description = file: readme.md
keywords = one, two
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
author=William Clarke
author_email=william.clarke@ndcn.ox.ac.uk

[options]
install_requires =
    numpy
    nibabel
    fslpy
python_requires = >=3.7

[options.extras_require]
VIS =
    fsl-mrs

[options.entry_points]
console_scripts =
    mrs_tools = mrs_tools:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/nifti_mrs/_version.py
versionfile_build = nifti_mrs/_version.py

[tool:pytest]
markers =
    with_fsl_mrs: marks tests as requring fsl-mrs installation (deselect with '-m "with_fsl_mrs"')

[flake8]
ignore =
    # Multiple spaces before operator
    E221
    W503
per-file-ignores =
    __init__.py:F401
    src/nifti_mrs/definitions.py:E501
exclude =
    .git,
    __pycache__,
    .vscode,
max-line-length=120